Add fallback for Inter font
Co-authored-by: jenniw <JenniWhitman@users.noreply.github.com>

--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -127,7 +127,7 @@
         #course-catalog-navigation {
             display: flex;
             margin: 0 auto;
-            font-family: 'Inter';
+            font-family: Inter,sans-serif;
         
             @include media-breakpoint-down(md) {
                 .slide-mobile-filter-overlay {
