add is_self_paced to context and logic

--- a/main/templates/partials/featured_product_card.html
+++ b/main/templates/partials/featured_product_card.html
@@ -8,7 +8,7 @@
       <div class="badge badge-program-type{% if not product.program_type %}-none{% endif %}">{% if product.program_type %}{{ product.program_type }}{% endif %}</div>
     </div>
     <div class="featured-product-info">
-      {% if product.start_date and not product.is_program %}
+      {% if product.start_date and not product.relevant_run.is_self_paced and not product.is_program %}
       <p class="date">
         Starts {{ product.start_date | date:"F j, Y" }}
       </p>
