--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -16,6 +16,7 @@
       media="all"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       media="none" onload="if(media!='all') media='all'">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     {% js_settings %}
     {% render_bundle 'style' %}
     {% noindex_meta %}
