--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -178,14 +178,30 @@ body.new-design {
           }
 
           .callout {
-
+            padding: 0.9375rem;
+            gap: 0.625rem;
+            flex-wrap: nowrap;
+            i.warning {
+              font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+              color: $warning;
+              padding: 0;
+              margin-top: .25rem;
+              width: fit-content;
+            }
+            p{
+              width: 95%;
+              font-size: 0.875rem;
+              color: $home-page-header-blue;
+              font-family: Inter, sans-serif;
+              margin: 0;
+            }
           }
           .callout-warning{
+            border: 1px solid rgba(255, 171, 0, 0.30);
             border-left: 2px solid $warning;
+            background: #FFF3CC;
           }
-          i.warning {
 
-          }
 
 
           .enrollment-info-icon {
