--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -235,6 +235,7 @@ body.new-design {
             text-decoration-line: underline;
             border-color: transparent;
             background-color: transparent;
+            padding-right: 0;
           }
           .more-dates-enrollment-list{
             list-style: none;
