--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -5,6 +5,8 @@
 @import "~react-day-picker/lib/style";
 @import "~bootstrap/scss/bootstrap";
 @import "~video.js/dist/video-js";
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 @import "common";
 @import "loader";
 @import "auth";
