--- a/frontend/public/scss/home-page/featured-product-cards.scss
+++ b/frontend/public/scss/home-page/featured-product-cards.scss
@@ -58,9 +58,12 @@
       padding: 3rem 0 1.8rem 0;
       flex-shrink: 0;
       fill: $home-page-grey-lite;
-      @include media-breakpoint-down(sm) {
+      @media (max-width: 601px) {
+        padding-top: 5rem;
+      }
+      @media (max-width: 481px) {
         width: 100%;
-        padding-top: 0;
+        padding-top: 1rem;
         justify-content: space-between;
       }
 
@@ -69,11 +72,10 @@
         font-size: 25px;
         padding-left: 0;
         margin-bottom: 0;
-        @include media-breakpoint-down(sm) {
+        @media (max-width: 481px)  {
           width: 176px;
           font-size: 18px;
           margin-left: 15px;
-          margin-top: 30px;
         }
       }
 
@@ -83,9 +85,8 @@
         justify-content: flex-end;
         gap: 10px;
         padding: 0;
-        @include media-breakpoint-down(sm) {
+        @media (max-width: 481px)  {
           margin-right: 15px;
-          margin-top: 30px;
         }
 
         button {
@@ -125,11 +126,11 @@
       flex-shrink: 0;
       padding: 0 0 17px 0;
 
-      @include media-breakpoint-down(sm) {
-        width: 100%;
+      @media (max-width: 481px) {
+        width: calc(100% - 4.88rem);
         padding-bottom: 0;
-        margin-top: 0;
-        padding-top: 2rem;
+        margin-top: .5rem;
+        padding-top: 3rem;
       }
       .carousel-content {
           width: 100%;
@@ -243,12 +244,12 @@
       display: flex;
       margin-top: 17px;
       width: 100%;
-      @include media-breakpoint-down(sm) {
+      @media (max-width: 481px)  {
         width: 100%;
-        margin-top: 30px;
+        margin-top: 3rem;
         padding-bottom: 0;
-        padding-left: 2.44rem;
-        padding-right: 2.44rem;
+        padding-left: 15px;
+        padding-right: 15px;
       }
 
       a.view-catalog-button {
@@ -264,7 +265,7 @@
         font-weight: 700;
         margin: auto;
         text-decoration: none;
-        @include media-breakpoint-down(sm) {
+        @media (max-width: 481px)  {
           width: 100%;
         }
       }
