--- a/frontend/public/scss/home-page/featured-product-cards.scss
+++ b/frontend/public/scss/home-page/featured-product-cards.scss
@@ -58,9 +58,12 @@
       padding: 3rem 0 1.8rem 0;
       flex-shrink: 0;
       fill: $home-page-grey-lite;
-      @include media-breakpoint-down(sm) {
+      @media (max-width: 601px) {
+        padding-top: 5rem;
+      }
+      @media (max-width: 481px) {
         width: 100%;
-        padding-top: 0;
+        padding-top: 1rem;
         justify-content: space-between;
       }
 
@@ -69,11 +72,10 @@
         font-size: 25px;
         padding-left: 0;
         margin-bottom: 0;
-        @include media-breakpoint-down(sm) {
+        @media (max-width: 481px)  {
           width: 176px;
           font-size: 18px;
           margin-left: 15px;
-          margin-top: 30px;
         }
       }
 
@@ -83,9 +85,14 @@
         justify-content: flex-end;
         gap: 10px;
         padding: 0;
-        @include media-breakpoint-down(sm) {
+        @media (max-width: 481px)  {
           margin-right: 15px;
-          margin-top: 30px;
+        }
+
+        button {
+          border: none;
+          background: transparent;
+          padding: 0;
         }
 
         .arrow {
@@ -119,83 +126,59 @@
       flex-shrink: 0;
       padding: 0 0 17px 0;
 
-      @include media-breakpoint-down(sm) {
-        width: 100%;
+      @media (max-width: 481px) {
+        width: calc(100% - 4.88rem);
         padding-bottom: 0;
-        margin-top: 0;
-        padding-top: 2rem;
+        margin-top: .5rem;
+        padding-top: 3rem;
       }
-
-      .carousel-inner {
-          width: 110%;
-          max-width: unset;
-          gap: 20px;
+      .carousel-content {
+          width: 100%;
           padding-bottom: 2rem;
-        @include media-breakpoint-down(sm) {
-          max-width: 100%;
+        .slick-slide {
+          margin: 0 .75rem;
+        }
+        .slick-list {
+          margin: 0 -.75rem;
+        }
+        .slick-slider {
+          overflow-x: hidden;
         }
 
-          a.carousel-item {
-            text-decoration: none;
-            width: 20%;
-            margin-right: 0;
-            flex: 0 0 20%;
-            display: block;
-            height: 260.953px;
-            padding-left: inherit;
-            padding-right: inherit;
-            transition: transform 0.6s linear;
-            @include media-breakpoint-down(xl) {
-              width: 25%;
-              flex: 0 0 25%;
-            }
-            @include media-breakpoint-down(lg) {
-              width: 33.33333%;
-              flex: 0 0 33.33333%;
-            }
-            @include media-breakpoint-down(md) {
-              width: 50%;
-              flex: 0 0 50%;
-            }
+        a.featured-product-card-link {
+          text-decoration: none;
+          margin-right: 0;
+          flex: 0 0 20%;
+          height: 290px;
+          .featured-product-card {
+            height: 95%;
+            border-radius: 5px;
+            flex-direction: column;
+            align-items: center;
+            border: 1px solid $home-page-grey-lite;
+            background: #FFF;
+            padding: 0;
+            flex: none;
+            box-shadow: 0 2px 3px 0 rgba(18, 38, 49, 0.15);
             @include media-breakpoint-down(sm) {
-              width: 100%;
-              flex: 0 0 100%;
-              height: unset;
-              padding-left: 2.44rem;
-              padding-right: 2.44rem;
+              padding: unset;
             }
-            .featured-product-card {
-              height: 100%;
+            .featured-product-thumb {
+              display: flex;
+              position: relative;
+              justify-content: center;
               border-radius: 5px;
-              flex-direction: column;
-              align-items: center;
-              border: 1px solid $home-page-grey-lite;
-              background: #FFF;
-              padding: 0;
-              flex: none;
-              box-shadow: 0 2px 3px 0 rgba(18, 38, 49, 0.15);
-              @include media-breakpoint-down(sm) {
-                padding: unset;
-
-              }
-
-              .featured-product-thumb {
-                display: flex;
-                position: relative;
-                justify-content: center;
-                border-radius: 5px;
-                width: 100%;
-                height: 10.6875rem;
-              }
+              width: 100%;
+              height: 10.6875rem;
 
               img {
                 width: 100%;
                 height: 10.6875rem;
                 border-radius: 5px 5px 0 0;
-                background: rgba(0, 0, 0, 0.20);
                 object-position: center;
                 object-fit: cover;
               }
+
               .badge-program-type {
                 display: inline-flex;
                 padding: 8px 15px;
@@ -210,63 +193,50 @@
                 font-weight: 700;
                 font-family: Inter, sans-serif;
               }
+
               .badge-program-type-none {
                 background: transparent;
               }
+            }
 
-              .featured-product-info {
-                padding: 15px;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: .31rem;
+            .featured-product-info {
+              padding: 15px;
+              display: flex;
+              flex-direction: column;
+              align-items: flex-start;
+              gap: .31rem;
+              align-self: stretch;
+
+              p.date {
+                color: $home-page-grey-text;
+                font-size: 12px;
+                margin-bottom: 5px;
+                overflow: hidden;
                 align-self: stretch;
+                text-overflow: ellipsis;
+                font-weight: 400;
+              }
 
-                p.date {
-                  color: $home-page-grey-text;
-                  font-size: 12px;
-                  margin-bottom: 5px;
-                  overflow: hidden;
-                  align-self: stretch;
-                  text-overflow: ellipsis;
-                  font-weight: 400;
-                }
-
-                h2.featured-product-card-title {
-                  height: 33px;
-                  align-self: stretch;
-                  color: $home-page-header-blue;
-                  font-size: 0.875rem;
-                  font-family: Inter, sans-serif;
-                  margin-top: 0;
-                  display: -webkit-box;
-                  -webkit-line-clamp: 2;
-                  -webkit-box-orient: vertical;
-                  overflow: hidden;
-                  line-height: 18px;
-                }
-                h2.featured-product-card-title.program-title {
-                  height: 57.953px;
-                }
+              h2.featured-product-card-title {
+                height: 38px;
+                align-self: stretch;
+                color: $home-page-header-blue;
+                font-size: 0.875rem;
+                font-family: Inter, sans-serif;
+                margin-top: 0;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                line-height: 18px;
+              }
+              h2.featured-product-card-title.program-title {
+                height: 57.953px;
               }
             }
           }
         }
-      }
-
-      @include media-breakpoint-down(sm) {
-        .carousel-inner .carousel-item > div {
-          display: none;
         }
-        .carousel-inner .carousel-item > div:first-child {
-          display: block;
-        }
-      }
-
-      .carousel-inner .carousel-item.active,
-      .carousel-inner .carousel-item-next,
-      .carousel-inner .carousel-item-prev {
-        display: flex;
       }
     }
 
@@ -275,12 +245,12 @@
       display: flex;
       margin-top: 17px;
       width: 100%;
-      @include media-breakpoint-down(sm) {
+      @media (max-width: 481px)  {
         width: 100%;
-        margin-top: 30px;
+        margin-top: 3rem;
         padding-bottom: 0;
-        padding-left: 2.44rem;
-        padding-right: 2.44rem;
+        padding-left: 15px;
+        padding-right: 15px;
       }
 
       a.view-catalog-button {
@@ -296,7 +266,7 @@
         font-weight: 700;
         margin: auto;
         text-decoration: none;
-        @include media-breakpoint-down(sm) {
+        @media (max-width: 481px)  {
           width: 100%;
         }
       }
