remove accidental added code

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -142,7 +142,7 @@
                                    $('#instructor-name-{{ member.id }}').focus();">
                     <span aria-hidden="true">&times;</span>
                   </button>
-                </div>Ï
+                </div>
                 <div class="modal-body">
                   <div class="row d-flex">
                     <div class="col col-instructor-photo">
