--- a/frontend/public/scss/product-faculty-members.scss
+++ b/frontend/public/scss/product-faculty-members.scss
@@ -27,6 +27,10 @@
       box-shadow: 0 1px 0 0 rgb(0 0 0 / 12%);
       display: flex;
 
+      @include media-breakpoint-down(sm) {
+        display: block;
+      }
+
       .member-info {
         margin-top: 7px;
         display: flow-root;
@@ -65,7 +69,6 @@
       @include media-breakpoint-down(sm) {
         display: block;
         float: none;
-        margin: 0 auto 10px;
       }
     }
   }
