--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -41,6 +41,16 @@ body.new-design {
       div.expand_here_body.open {
         max-height: 400rem;
       }
+
+      a.expand_here_link {
+        opacity: 0;
+        transition: opacity 225ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      }
+
+      a.expand_here_link.fade {
+        opacity: 1;
+        transition: opacity 300ms cubic-bezier(0.55, 0.085, 0.68, 0.53);
+      }
     }
 
     section.about-this-class {
