Course Page: More enrollment dates updates

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -250,6 +250,12 @@ body.new-design {
               padding-left: 0;
               background-color: transparent;
             }
+            button.more-dates-link.enrolled {
+              color: $green-darker;
+              cursor: default;
+              text-decoration-line: none;
+
+            }
           }
         }
 
