--- a/frontend/public/scss/top-app-bar.scss
+++ b/frontend/public/scss/top-app-bar.scss
@@ -77,7 +77,7 @@ header.site-header {
     display: block;
   }
 
-  li[data-bs-target="#nav"] {
+  li.mobile-dropdown-item {
     display: block;
     padding: 10px 0;
     margin: 0 auto;
