--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -12,6 +12,11 @@ body.new-design {
     margin-top: 1.5rem;
     background-color: white;
 
+    .row.align-items-center {
+      justify-content: center;
+      align-items: center;
+    }
+
     section.course-description {
       font-size: 20px;
       color: var(--GreyText, #6F7175);
@@ -87,6 +92,7 @@ body.new-design {
       border: 1px solid #e4e9ef;
       padding: 2rem;
       clear: both;
+      margin-bottom: 1.5rem;
     }
 
     #product-info-box {
