--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -9,6 +9,7 @@ $gray-darker: #c2c2c2;
 $green-darker: #3E775D;
 $red-darker: #B43E3E;
 $success: #28977e;
+$success-dark: rgba(40, 151, 126, 1);
 
 $light-gray: #666666;
 $very-light-gray: #f5f5f5;
