--- a/frontend/public/scss/common.scss
+++ b/frontend/public/scss/common.scss
@@ -111,6 +111,11 @@ a.link-button {
     padding: 17px 50px;
   }
 
+  &.btn-sm {
+    font-size: 14px;
+    padding: 5px 20px;
+  }
+
   &.highlight {
     font-size: 20px;
     font-weight: 700;
@@ -427,4 +432,9 @@ button.btn-secondary.unstyled {
 
 .display-none {
   display: none !important;
+}
+
+.alert-dark-success {
+  background-color: rgba(40, 151, 126, 1);
+  color: white;
 }
