--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -356,7 +356,6 @@ body.new-design {
       gap: 10px;
       border-radius: 5px;
       border: 1px solid var(--BorderGrey, #DFE5EC);
-      background: #FFF;
       box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.05);
       font-size: 14px;
     }
@@ -379,6 +378,7 @@ body.new-design {
     }
 
     p {
+      font-size: 18px;
       margin-bottom: 0;
       span.text-danger {
         font-size: 15px;
@@ -390,20 +390,29 @@ body.new-design {
 
       form {
         margin-left: 12px;
+
+        button.btn-upgrade {
+          font-size: 20px;
+          line-height: normal;
+          span {
+            font-size: 18px;
+          }
+        }
       }
     }
   }
 
   div.upgrade-options-row {
-    margin: 20px 1px 10px 1px;
+    margin: 10px 1px 0px 1px;
 
     display: flex;
-    padding: 10px 0px 10px 0px;
+    padding: 0px;
     justify-content: space-between;
     align-items: center;
     align-self: stretch; 
 
-    border-bottom: 1px solid var(--BorderGrey, #DFE5EC); 
+    // border-bottom: 1px solid var(--BorderGrey, #DFE5EC); 
+    border: none;
 
     div {
       width: auto;
@@ -412,6 +421,10 @@ body.new-design {
 
       a {
         color: black;
+      }
+
+      p {
+        padding: 12px 6px;
       }
     }
   }
