fixing some more smaller things, moved the certificate logo SVG into a separate file

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -363,10 +363,9 @@ body.new-design {
     margin: 0 1px;
 
     div.certificate-pricing-logo {
-      svg {
+      img {
         width: 40px;
         height: 44px;
-        fill: var(--GreyText, #6F7175);
       }
       margin-right: 10px;
     }
