add userid to js calls, change python calls to user.id instead of user.email

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -118,6 +118,7 @@
                 {% if page.is_program_page %}
                 <input id="programId" type="hidden" value="{{page.program.readable_id}}" />
                 {% endif %}
+                <input id="userId" type="hidden" value="{{ user.id }}" />
 
                 <div class="w-100" id="productDetailEnrollment"></div>
               </div>
