Course About Page: tablet and mobile view adjustments (#1960)

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -13,7 +13,7 @@
 {% if new_design %}
     <div id="main" class="product-page">
       <div class="container">
-        <div class="row d-flex flex-row">
+        <div class="row d-flex flex-row align-center">
           <div class="col flex-grow-1" id="product-details">
             <div class="text">
               <h1>{{ page.title }}</h1>
