--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -3,9 +3,15 @@
 body.new-design {
   font-family: Inter;
 
-  h1, h2 {
-      font-family: Poppins;
+  h2 {
+    font-family: Poppins;
 
+  }
+  h1 {
+    font-family: Poppins;
+    @include media-breakpoint-up(lg) {
+      font-size: 45px;
+    }
   }
 
   .product-page {
@@ -22,6 +28,9 @@ body.new-design {
       color: var(--GreyText, #6F7175);
       font-size: 14px;
 
+      img {
+        margin-right: 10px;
+      }
       a {
         text-decoration: none;
       }
@@ -33,6 +42,9 @@ body.new-design {
       padding: 3px 10px;
       font-size: 12px;
       font-family: Poppins;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
     }
 
 
