Accessibility: Make label visible to screen reader (#2004)

--- a/frontend/public/scss/home-page/home-page-contact-row.scss
+++ b/frontend/public/scss/home-page/home-page-contact-row.scss
@@ -117,7 +117,14 @@ body.new-design {
               max-width: 100%;
             }
             label {
-              display: none;
+              position:absolute;
+              width:1px;
+              height:1px;
+              overflow:hidden;
+
+              .hs-form-required {
+                display: none;
+              }
             }
             .input {
               .hs-input {
