add styles to the navbar on product page (#2020)

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -29,7 +29,7 @@
     {% endblock %}
     {% endspaceless %}
   </head>
-  <body class="{% block bodyclass %}{% endblock %}">
+  <body class="{% block bodyclass %}{% endblock %}" tabindex="0">
   <div class="main-panel">
     <a href="#main" class="visually-hidden visually-hidden-focusable">Skip to main content</a>
     {% include "partials/gtm_body.html" %}
