--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -60,20 +60,60 @@ body.new-design {
     }
 
     #tab-bar {
-      background-color: #edf2f4;
-      padding: 15px 19px;
-      margin: 2em 0;
+      padding: 0;
+      border-bottom: 1px solid #DFE5EC;
+      background-color: #EFF3F6;
 
-      ul li.nav-item {
-        padding: 0;
-        padding-right: 40px;
-        color: #35607a;
-        font-weight: normal;
+      @include media-breakpoint-down(md) {
+        padding: 15px;
+        margin: 0 -15px;
+        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+      }
 
+      li.nav-item {
         a {
-          color: #35607a;
+          color: #2A6D87;
           text-decoration: none;
+          padding: 18px 20px;
+          font-size: 16px;
+          line-height: 19px;
         }
+        a.active, a.active:hover {
+          color: $primary;
+          border-bottom: 1px solid $primary;
+        }
+        a:hover {
+          color: #061e2d;
+        }
+        a.nav-link.dropdown-item {
+        color: black;
+        text-decoration: none;
+        border-bottom: none;
+        }
+      }
+      .dropdown-menu {
+        box-shadow: 0 5px 3px 0 rgba(0, 0, 0, 0.1);
+        border: 1px solid #DFE5EC;
+        margin: -2px 0 0 0;
+      }
+      .dropdown-toggle {
+        border: 1px solid #DFE5EC;
+        padding: 10px 15px;
+        background-color: white;
+        width: 100%;
+        color: #03152D;
+        text-align: left;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-decoration: none;
+      }
+      .dropdown-menu.show {
+        width: 100%;
+      }
+      .dropdown-item.active {
+        background-color: #8c8a8a42;
+        color: #061e2d;
       }
     }
 
@@ -115,7 +155,7 @@ body.new-design {
 
     section.about-this-class {
       color: #000;
-      /* TODO: this requires a different font and colors */    
+      /* TODO: this requires a different font and colors */
       h2, h3, h4, h5, h6 {
         font-size: smaller;
       }
@@ -173,32 +213,32 @@ body.new-design {
             height: 64px;
             border: none;
             border-radius: 50%;
-    
+
             &:hover {
               opacity: 0.6;
             }
           }
-    
+
           .vjs-poster {
             height: fit-content;
           }
         }
-    
+
         .video-js .vjs-big-play-button .vjs-icon-placeholder:before {
           top: 0.3em;
         }
-    
+
         .vjs-youtube {
-    
+
           .vjs-big-play-button {
             display: none;
           }
         }
-    
+
         .video-holder {
           background: $sirocco;
           margin-top: 10px;
-    
+
           img {
             display: block;
             width: 100%;
@@ -286,7 +326,7 @@ body.new-design {
           .enrollment-info-icon {
             max-width: 20px;
             margin-right: 12px;
-            
+
             img {
               max-width: 20px;
             }
@@ -373,7 +413,7 @@ body.new-design {
       }
     }
 
-    ul { 
+    ul {
       padding: 0;
     }
 
@@ -393,7 +433,7 @@ body.new-design {
 
     label {
      font-weight: bold;
-     line-height: 24px; /* 160% */      
+     line-height: 24px; /* 160% */
     }
 
     select {
@@ -409,7 +449,7 @@ body.new-design {
     }
   }
 
-  div.certificate-pricing-row { 
+  div.certificate-pricing-row {
     border-radius: 5px;
     border: 1px solid var(--BorderGrey, #DFE5EC);
     background: rgba(3, 21, 45, 0.05);
@@ -456,9 +496,9 @@ body.new-design {
     padding: 0px;
     justify-content: space-between;
     align-items: center;
-    align-self: stretch; 
+    align-self: stretch;
 
-    // border-bottom: 1px solid var(--BorderGrey, #DFE5EC); 
+    // border-bottom: 1px solid var(--BorderGrey, #DFE5EC);
     border: none;
 
     div {
@@ -478,7 +518,7 @@ body.new-design {
 
   div.upsell-messaging-header {
     margin: 20px 1px;
-    
+
     div {
       font-weight: 700;
     }
@@ -521,11 +561,11 @@ body.new-design {
           height: 0;
           z-index: 9;
         }
-    
+
         h5 {
           margin-left: -9999px;
         }
-    
+
         button.close {
           border: 0;
           border-radius: 100%;
@@ -539,7 +579,7 @@ body.new-design {
           }
         }
       }
-    
+
       .modal-body {
         padding-left: 50px;
         padding-right: 50px;
