update footer logo

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -5,7 +5,7 @@
   <div class="new-footer-container">
       <div class="copyright-container">
           <div class="address-col">
-           <img src="{% static 'images/logo-footer-grey.png' %}" alt="MIT" loading="lazy"/>
+           <img src="{% static 'images/open-learning-logo-grey.png' %}" alt="MIT" loading="lazy"/>
             <address>
               Massachusetts Institute of Technology <br />77 Massachusetts Avenue
               <br />Cambridge, MA 02139
@@ -83,7 +83,7 @@
   <div class="container">
     <div class="footer-top">
       <div class="mit-info">
-        <img src="{% static 'images/logo-footer-grey.png.png' %}" width="78" height="41" alt="MIT" loading="lazy"/>
+        <img src="{% static 'images/mit.png' %}" width="78" height="41" alt="MIT" loading="lazy"/>
         <address>
           Massachusetts Institute of Technology <br />77 Massachusetts Avenue
           <br />Cambridge, MA 02139
