--- a/frontend/public/scss/footer.scss
+++ b/frontend/public/scss/footer.scss
@@ -64,7 +64,7 @@
          }
       }
 
-      .address-col>img {
+      .address-col>a>img {
         display: inline-flex;
         width: 130px;
         height: 33px;
