New MITxOnline Logo (#2074)

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -5,7 +5,9 @@
   <div class="new-footer-container">
       <div class="copyright-container">
           <div class="address-col">
-           <img src="{% static 'images/mit.png' %}" alt="MIT" loading="lazy"/>
+            <a href="https://openlearning.mit.edu">
+              <img src="{% static 'images/open-learning-logo.png' %}" alt="MIT" loading="lazy"/>
+            </a>
             <address>
               Massachusetts Institute of Technology <br />77 Massachusetts Avenue
               <br />Cambridge, MA 02139
