--- a/frontend/public/scss/footer.scss
+++ b/frontend/public/scss/footer.scss
@@ -13,22 +13,24 @@
   .new-footer-container {
     display:flex;
 
+    @include media-breakpoint-up(lg) {
+      flex-basis: 75%;
+    }
     @include media-breakpoint-down(md) {
-       flex-direction: column-reverse;
-       padding-left: 10px;
+      flex-direction: column-reverse;
+      padding-left: 10px;
     }
   }
 
   .copyright-container {
-       padding: 40px 0 40px 40px;
-       width:47%;
+       padding: 40px 0;
+       flex-basis:40%;
        flex-wrap: wrap;
        flex-direction: row-reverse;
-       padding-left: 98px;
 
       @include media-breakpoint-down(md) {
          width:100%;
-         padding-top: 0;
+         padding-top: 10px;
          display: inline-flex;
          flex-direction: column;
       }
@@ -46,13 +48,8 @@
         padding: 30px 0 30px 30px;
       }
 
-      @include media-breakpoint-between(lg, xl) {
-        padding-left:70px;
-      }
-
 
       .copyright-col{
-        margin-left: 100px;
         @include media-breakpoint-down(lg) {
           margin-left: 0;
         }
@@ -62,37 +59,34 @@
         opacity: 0.6;
       }
       .address-col, .copyright-col {
-        display:inline-flex;
         @include media-breakpoint-only(md) {
           flex-direction: column;
          }
       }
 
-      .address-col>img {
-          width: 85px;
-          height: 45px;
-          flex-shrink: 0;
-          margin-top: 5px;
-          margin-right: 15px;
-          @include media-breakpoint-only(md) {
-             margin-bottom: 20px;
-         }
+      .address-col>a>img {
+        display: inline-flex;
+        width: 130px;
+        height: 33px;
+        flex-shrink: 0;
+        margin-top: 5px;
+        margin-right: 15px;
+        margin-bottom: 20px;
+        @include media-breakpoint-only(md) {
+           margin-bottom: 20px;
+       }
       }
   }
 
   .help-contact-container{
-    width:55%;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    flex-basis:60%;
+    margin: auto;
     opacity: 0.6;
-
-    @media (min-width: 1024px) {
-      width: auto;
-    }
 
     @include media-breakpoint-down(sm) {
       padding-left: 12px;
-      width:100%;
+      width: 100%;
+      padding-top: 30px;
       .links > li {
         width: calc(100% / 3);
         padding: 5px 0;
@@ -102,6 +96,7 @@
     @include media-breakpoint-between(sm, md) {
       padding-left: 0;
       width:100%;
+      padding-top: 30px;
     }
 
     .help-contact-row {
