Initial run at unified card styling (not done yet at all)

--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -38,6 +38,7 @@
 @import "product-page/product-faculty-members";
 @import "home-page/home-page-contact-row";
 @import "product-page/program-courses.scss";
+@import "cards.scss";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
