--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -58,3 +58,5 @@ $home-page-border-purple: #491EA4;
 $home-page-subheader-light-blue: #03ADD2;
 
 $product-page-hover-time: 0.5s;
+
+$card-drop-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15);
