--- a/frontend/public/scss/product-page/program-courses.scss
+++ b/frontend/public/scss/product-page/program-courses.scss
@@ -140,6 +140,12 @@ body.new-design {
                     }
                 }
             }
+
+            .program-course-card-link {
+                text-decoration: none;
+                display: block;
+                width: fit-content;
+            }
         }
     }
 }
